# RTfE

./: README.md
.github/workflows/: gha-codeql.yml  libcxx-build-and-test.yaml  libcxx-build-containers.yml  libcxx-run-benchmarks.yml  premerge.yaml  sync-upstream.yaml
llvm/: CMakeLists.txt
riscv-software/: .gitignore
riscv-software/embedded/: CMakeLists.txt  versions.json
riscv-software/embedded/cmake/: fetch_newlib.cmake
riscv-software/embedded/patches/newlib/: 0002-Patch-time.h-for-uKOS.patch
riscv-software/embedded/riscv-multilib/: CMakeLists.txt  CMakeListsDemo.txt  gen-multilib-yaml.sh  multilib.yaml.in
riscv-software/embedded/riscv-multilib/json/: multilib.json
riscv-software/embedded/riscv-multilib/json/variants/: riscv32.json  riscv64.json  rv32i_ilp32.json  rv32iac_ilp32.json  rv32im_ilp32.json  rv32imac_ilp32.json  rv32imafc_ilp32f.json  rv64imac_lp64.json  rv64imafdc_lp64d.json
riscv-software/embedded/riscv-runtimes/: CMakeLists.txt
